--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@
 html {
   scroll-behavior: smooth;
 }
+
+/* Light Mode (Default) */
+body {
+  background-color: white;
+  color: black;
+}
+
+/* Dark Mode */
+body.dark-mode {
+  background-color: black;
+  color: white;
+}
+
+button {
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
